--- a/package.json
+++ b/package.json
@@ -7,9 +7,12 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-router-dom": "^4.2.2",
-    "react-share": "^1.18.0"
+    "react-share": "^1.18.0",
+    "cors": "2.8.3",
+    "express": "4.15.3"
   },
   "scripts": {
+    "api": "node server.js",
     "build": "webpack",
     "server": "webpack-dev-server",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -17,6 +20,7 @@
   "author": "Gala",
   "license": "ISC",
   "devDependencies": {
+    "axios": "^0.17.1",
     "babel-core": "^6.26.0",
     "babel-loader": "^7.1.2",
     "babel-plugin-transform-class-properties": "^6.24.1",
