--- a/.babelrc
+++ b/.babelrc
@@ -1,5 +1,5 @@
 {
-    "presets": ["babel-preset-env", "react"],
+    "presets": ["babel-preset-env", "stage-2", "react"],
     "plugins": [
         "transform-class-properties"
      ]
